--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=agilecafe362.AgileCafe362
+javafx.main.class=agilecafe362__.AgileCafe362
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
