--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,7 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\KV\\Desktop\\mysql-connector-java-5.1.39
 javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
