--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,13 +24,13 @@ debug.classpath=\
 debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
-dist.dir=dist
+
 dist.jar=${dist.dir}/AgileCafe362__.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.39-bin.jar=..\\..\\..\\..\\..\\Desktop\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.39-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
