--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,1 @@
-auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Aven\\Downloads\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
-user.properties.file=C:\\Users\\Aven\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.39-bin.jar
